# Animcore

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
animcore-bevy/: Cargo.toml
animcore-bevy/src/: lib.rs
animcore-editor/: Cargo.toml
animcore-editor/src/: app.rs  canvas.rs  main.rs  panels.rs  sm_editor.rs  tools.rs
animcore-wasm/: Cargo.toml
animcore-wasm/src/: lib.rs
animcore/src/: effects.rs  ffi.rs  lib.rs  path.rs  playback.rs  scene.rs  state_machine.rs  transform.rs
animcore/src/format/: mod.rs
animcore/src/renderer/: mod.rs  skia.rs
animcore/src/svg/: export.rs
src/: bones.rs  constraints.rs  lib.rs  main.rs  mixer.rs  paint.rs  scene.rs  schema.rs
src/format/: binary.rs
src/renderer/: mod.rs  skia.rs  vello.rs
src/svg/: export.rs  import.rs
