[package]
name = "animcore"
version = "0.1.0"
edition = "2021"

[features]
default = ["skia-renderer"]
skia-renderer = ["tiny-skia"]
gpu = []        # reserved for vello phase

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tiny-skia = { version = "0.11", optional = true }

[dev-dependencies]
tiny-skia = "0.11"   # always available in tests
